add filter wallpaper plugins on wallpaperGUI